Basic JS complete

--- a/Javascript Basic/Index.html
+++ b/Javascript Basic/Index.html
@@ -8,8 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 class="heading" id="title">Hello World</h1>
+    <h1 class="heading" id="title">Hello World 1</h1>
+    <h1 class="heading" id="title">Hello World 2</h1>
+    <ul>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit.</li>
+    </ul>
+
+    <h2>Counter : <span id="counter">0</span></h2>
+    
+    <button class="incrementBtn">Increase</button>
+    <button class="decrementBtn">Decrease</button>
+
+    <ul id="list-item"></ul>
     <script src="./script.js"></script>
     <script src="./dom.js"></script>
+    <script src="./ES6+.js"></script>
 </body>
 </html>
